plugins {
    id 'java'
}

group 'tci.group-5'
version '1.0-SNAPSHOT'

sourceCompatibility = 1.8

repositories {
    mavenCentral()
}

dependencies {
    testCompile group: 'junit', name: 'junit', version: '4.12'

    // jsoup HTML parser library @ https://jsoup.org/
    compile 'org.jsoup:jsoup:1.11.3'
    compile group: 'pl.pragmatists', name: 'JUnitParams', version: '1.0.4'
    compile 'org.hamcrest:hamcrest-core:1.3'
    testCompile group: 'org.mockito', name: 'mockito-core', version: '2.23.4'

    // https://mvnrepository.com/artifact/com.owlike/genson
    compile group: 'com.owlike', name: 'genson', version: '1.4'
}
